stability/tests/ui/fail/deprecated.rs
#![feature(staged_api)]
#![stable(feature = "root", since = "1.0.0")]
#![allow(internal_features)]

#[stability::deprecated(feature = "test")]
fn test() {}

fn main() {}
